# starknet-rust-deployment

./: Cargo.toml  Scarb.toml
deployer/: Cargo.toml
deployer/src/: main.rs
scripts/: declare.sh  deploy.sh
tests/: test_contract.cairo
