[workspace]
resolver = "2"
members = ["deployer"]

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
sncast = { git = "https://github.com/neotheprogramist/starknet-foundry", branch = "fix/sncast" }
